# claude-code-tts

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TRACKING.md  justfile  pyproject.toml
commands/: mute.md  persona.md  sounds.md  tts-cleanup.md  tts-discover.md  tts-intermediate.md  tts-mode.md  tts-mute.md  tts-persona.md  tts-personas.md  tts-random.md  tts-release.md  tts-sounds.md  tts-speed.md  tts-status.md  tts-test.md  tts-unmute.md  unmute.md
docs/: hotkey-setup.md  kokoro-swift-cli-design.md  roadmap.md  voice-notes.md
docs/architecture/: universal-tts-design.md
docs/gemini-cli/: README.md
examples/: config.json  settings.json
hooks/: play-sound.sh  speak-intermediate.sh  speak-response.sh  voice-context.sh
scripts/: check-version.sh  commit-feature.sh  install.py  pre-push  release.sh  tts-audition.sh  tts-builder.py  tts-builder.sh  tts-cleanup.sh  tts-daemon.py  tts-discover.sh  tts-filter.py  tts-intermediate.sh  tts-lib.sh  tts-mode.sh  tts-mute.sh  tts-pause.sh  tts-persona.sh  tts-random.sh  tts-sounds.sh  tts-speak.sh  tts-speed.sh  tts-status.sh  tts-test.sh  tts-unmute.sh
services/: claude-tts.service  com.claude-tts.daemon.plist
sounds/: README.md
src/ai_tts/: __init__.py
src/ai_tts/adapters/: __init__.py  claude.py  gemini.py
src/ai_tts/core/: __init__.py  config.py  filters.py  persona.py  session.py  speaker.py
src/claude_code_tts/: __init__.py  audio.py  cli.py  config.py  daemon.py  filter.py  handy.py  install.py  mic_watcher.py  release.py  session.py  sherpa_catalog.py  sherpa_speak.py  tone.py  voice_context.py
tests/: __init__.py  test_audition.py  test_cli.py  test_config.py  test_daemon_integration.py  test_enable_sherpa.py  test_filter.py  test_handy.py  test_install.py  test_mic_watcher.py  test_resume_playback.py  test_session_id.py  test_session_pin.py  test_session_py.py  test_sessions_d.py  test_sherpa_backend.py  test_sherpa_cli.py  test_sherpa_install.py  test_tone.py  test_upgrade.py  test_voice_context.py  test_watermark.py
tests/docker/: Dockerfile.base  Dockerfile.upgrade-test  run-upgrade-test.sh  test_upgrade_e2e.sh
